ace/parser/ModelParser.js
// Generated from Model.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4full/index');
var grammarFileName = "Model.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'package'", "'import'", "'.'", "'*'", "'annotation'", 
                     "':'", "'@'", "'('", "')'", "'class'", "'assoc'", "'{'", 
                     "'}'", "'['", "','", "']'", "'+'", "'extends'", "'type'", 
                     "'='", "':='", "'part'", "'var'", "'val'", "'ordered'", 
                     "'unique'", "'source'", "'target'", "'fun'", "'pre'", 
                     "'post'", "'req'", "'->'", "'{|'", "'|}'", "'Bool'", 
                     "'Char'", "'Int'", "'Real'", "'String'", "'Unit'", 
                     "'Class'", "'Set'", "'OSet'", "'Bag'", "'Seq'", "'-'", 
                     "'!'", "'return'", "'/'", "'%'", "'inter'", "'\\'", 
                     "'++'", "'#'", "'^'", "'union'", "'<='", "'>='", "'<'", 
                     "'>'", "'!='", "'isin'", "'!isin'", "'subset'", "'psubset'", 
                     "'&&'", "'||'", "'$result'", "'::'", "'_'", null, "':-'", 
                     null, null, null, "'null'", "'this'", null, null, null, 
                     null, null, null, null, "';'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      "Keyword", "SUCHTHAT", "IntegerLiteral", "RealLiteral", 
                      "BooleanLiteral", "NullLiteral", "ThisLiteral", "CharacterLiteral", 
                      "StringLiteral", "Identifier", "CommentBorder", "COMMENT", 
                      "LINE_COMMENT", "WS", "SEP" ];

var ruleNames =  [ "model", "packageDeclaration", "importDeclaration", "annotationDeclaration", 
                   "annotation", "topDeclaration", "entityDeclaration", 
                   "typeParameters", "typeParameter", "typeBound", "extending", 
                   "block", "blockDeclaration", "memberDeclaration", "typeDeclaration", 
                   "propertyDeclaration", "propertyModifier", "functionDeclaration", 
                   "paramList", "param", "functionSpecification", "constraint", 
                   "multiplicity", "expressionOrStar", "type", "primitiveType", 
                   "classIdentifier", "collectionKind", "typeArguments", 
                   "expression", "argumentList", "positionalArgumentList", 
                   "namedArgumentList", "namedArgument", "collectionOrType", 
                   "rngBindingList", "rngBinding", "patternList", "pattern", 
                   "identifierList", "expressionList", "qualifiedName", 
                   "literal" ];

function ModelParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ModelParser.prototype = Object.create(antlr4.Parser.prototype);
ModelParser.prototype.constructor = ModelParser;

Object.defineProperty(ModelParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ModelParser.EOF = antlr4.Token.EOF;
ModelParser.T__0 = 1;
ModelParser.T__1 = 2;
ModelParser.T__2 = 3;
ModelParser.T__3 = 4;
ModelParser.T__4 = 5;
ModelParser.T__5 = 6;
ModelParser.T__6 = 7;
ModelParser.T__7 = 8;
ModelParser.T__8 = 9;
ModelParser.T__9 = 10;
ModelParser.T__10 = 11;
ModelParser.T__11 = 12;
ModelParser.T__12 = 13;
ModelParser.T__13 = 14;
ModelParser.T__14 = 15;
ModelParser.T__15 = 16;
ModelParser.T__16 = 17;
ModelParser.T__17 = 18;
ModelParser.T__18 = 19;
ModelParser.T__19 = 20;
ModelParser.T__20 = 21;
ModelParser.T__21 = 22;
ModelParser.T__22 = 23;
ModelParser.T__23 = 24;
ModelParser.T__24 = 25;
ModelParser.T__25 = 26;
ModelParser.T__26 = 27;
ModelParser.T__27 = 28;
ModelParser.T__28 = 29;
ModelParser.T__29 = 30;
ModelParser.T__30 = 31;
ModelParser.T__31 = 32;
ModelParser.T__32 = 33;
ModelParser.T__33 = 34;
ModelParser.T__34 = 35;
ModelParser.T__35 = 36;
ModelParser.T__36 = 37;
ModelParser.T__37 = 38;
ModelParser.T__38 = 39;
ModelParser.T__39 = 40;
ModelParser.T__40 = 41;
ModelParser.T__41 = 42;
ModelParser.T__42 = 43;
ModelParser.T__43 = 44;
ModelParser.T__44 = 45;
ModelParser.T__45 = 46;
ModelParser.T__46 = 47;
ModelParser.T__47 = 48;
ModelParser.T__48 = 49;
ModelParser.T__49 = 50;
ModelParser.T__50 = 51;
ModelParser.T__51 = 52;
ModelParser.T__52 = 53;
ModelParser.T__53 = 54;
ModelParser.T__54 = 55;
ModelParser.T__55 = 56;
ModelParser.T__56 = 57;
ModelParser.T__57 = 58;
ModelParser.T__58 = 59;
ModelParser.T__59 = 60;
ModelParser.T__60 = 61;
ModelParser.T__61 = 62;
ModelParser.T__62 = 63;
ModelParser.T__63 = 64;
ModelParser.T__64 = 65;
ModelParser.T__65 = 66;
ModelParser.T__66 = 67;
ModelParser.T__67 = 68;
ModelParser.T__68 = 69;
ModelParser.T__69 = 70;
ModelParser.T__70 = 71;
ModelParser.Keyword = 72;
ModelParser.SUCHTHAT = 73;
ModelParser.IntegerLiteral = 74;
ModelParser.RealLiteral = 75;
ModelParser.BooleanLiteral = 76;
ModelParser.NullLiteral = 77;
ModelParser.ThisLiteral = 78;
ModelParser.CharacterLiteral = 79;
ModelParser.StringLiteral = 80;
ModelParser.Identifier = 81;
ModelParser.CommentBorder = 82;
ModelParser.COMMENT = 83;
ModelParser.LINE_COMMENT = 84;
ModelParser.WS = 85;
ModelParser.SEP = 86;

ModelParser.RULE_model = 0;
ModelParser.RULE_packageDeclaration = 1;
ModelParser.RULE_importDeclaration = 2;
ModelParser.RULE_annotationDeclaration = 3;
ModelParser.RULE_annotation = 4;
ModelParser.RULE_topDeclaration = 5;
ModelParser.RULE_entityDeclaration = 6;
ModelParser.RULE_typeParameters = 7;
ModelParser.RULE_typeParameter = 8;
ModelParser.RULE_typeBound = 9;
ModelParser.RULE_extending = 10;
ModelParser.RULE_block = 11;
ModelParser.RULE_blockDeclaration = 12;
ModelParser.RULE_memberDeclaration = 13;
ModelParser.RULE_typeDeclaration = 14;
ModelParser.RULE_propertyDeclaration = 15;
ModelParser.RULE_propertyModifier = 16;
ModelParser.RULE_functionDeclaration = 17;
ModelParser.RULE_paramList = 18;
ModelParser.RULE_param = 19;
ModelParser.RULE_functionSpecification = 20;
ModelParser.RULE_constraint = 21;
ModelParser.RULE_multiplicity = 22;
ModelParser.RULE_expressionOrStar = 23;
ModelParser.RULE_type = 24;
ModelParser.RULE_primitiveType = 25;
ModelParser.RULE_classIdentifier = 26;
ModelParser.RULE_collectionKind = 27;
ModelParser.RULE_typeArguments = 28;
ModelParser.RULE_expression = 29;
ModelParser.RULE_argumentList = 30;
ModelParser.RULE_positionalArgumentList = 31;
ModelParser.RULE_namedArgumentList = 32;
ModelParser.RULE_namedArgument = 33;
ModelParser.RULE_collectionOrType = 34;
ModelParser.RULE_rngBindingList = 35;
ModelParser.RULE_rngBinding = 36;
ModelParser.RULE_patternList = 37;
ModelParser.RULE_pattern = 38;
ModelParser.RULE_identifierList = 39;
ModelParser.RULE_expressionList = 40;
ModelParser.RULE_qualifiedName = 41;
ModelParser.RULE_literal = 42;

function ModelContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ModelParser.RULE_model;
    return this;
}

ModelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModelContext.prototype.constructor = ModelContext;

ModelContext.prototype.EOF = function() {
    return this.getToken(ModelParser.EOF, 0);
};

ModelContext.prototype.packageDeclaration = function() {
    return this.getTypedRuleContext(PackageDeclarationContext,0);
};

ModelContext.prototype.importDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ImportDeclarationContext);
    } else {
        return this.getTypedRuleContext(ImportDeclarationContext,i);
    }
};

ModelContext.prototype.annotationDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AnnotationDeclarationContext);
    } else {
        return this.getTypedRuleContext(AnnotationDeclarationContext,i);
    }
};

ModelContext.prototype.topDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TopDeclarationContext);
    } else {
        return this.getTypedRuleContext(TopDeclarationContext,i);
    }
};




ModelParser.ModelContext = ModelContext;

ModelParser.prototype.model = function() {

    var localctx = new ModelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ModelParser.RULE_model);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ModelParser.T__0) {
            this.state = 86;
            this.packageDeclaration();
        }

        this.state = 92;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===ModelParser.T__1) {
            this.state = 89;
            this.importDeclaration();
            this.state = 94;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 98;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===ModelParser.T__4) {
            this.state = 95;
            this.annotationDeclaration();
            this.state = 100;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ModelParser.T__6) | (1 << ModelParser.T__7) | (1 << ModelParser.T__9) | (1 << ModelParser.T__10) | (1 << ModelParser.T__11) | (1 << ModelParser.T__18) | (1 << ModelParser.T__21) | (1 << ModelParser.T__22) | (1 << ModelParser.T__23) | (1 << ModelParser.T__24) | (1 << ModelParser.T__25) | (1 << ModelParser.T__26) | (1 << ModelParser.T__27) | (1 << ModelParser.T__28))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (ModelParser.T__31 - 32)) | (1 << (ModelParser.T__46 - 32)) | (1 << (ModelParser.T__47 - 32)) | (1 << (ModelParser.T__48 - 32)))) !== 0) || ((((_la - 69)) & ~0x1f) == 0 && ((1 << (_la - 69)) & ((1 << (ModelParser.T__68 - 69)) | (1 << (ModelParser.IntegerLiteral - 69)) | (1 << (ModelParser.RealLiteral - 69)) | (1 << (ModelParser.BooleanLiteral - 69)) | (1 << (ModelParser.NullLiteral - 69)) | (1 << (ModelParser.ThisLiteral - 69)) | (1 << (ModelParser.CharacterLiteral - 69)) | (1 << (ModelParser.StringLiteral - 69)) | (1 << (ModelParser.Identifier - 69)))) !== 0)) {
            this.state = 101;
            this.topDeclaration();
            this.state = 106;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 107;
        this.match(ModelParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PackageDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ModelParser.RULE_packageDeclaration;
    return this;
}

PackageDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PackageDeclarationContext.prototype.constructor = PackageDeclarationContext;

PackageDeclarationContext.prototype.qualifiedName = function() {
    return this.getTypedRuleContext(QualifiedNameContext,0);
};




ModelParser.PackageDeclarationContext = PackageDeclarationContext;

ModelParser.prototype.packageDeclaration = function() {

    var localctx = new PackageDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ModelParser.RULE_packageDeclaration);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 109;
        this.match(ModelParser.T__0);
        this.state = 110;
        this.qualifiedName();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ImportDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ModelParser.RULE_importDeclaration;
    return this;
}

ImportDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImportDeclarationContext.prototype.constructor = ImportDeclarationContext;

ImportDeclarationContext.prototype.qualifiedName = function() {
    return this.getTypedRuleContext(QualifiedNameContext,0);
};




ModelParser.ImportDeclarationContext = ImportDeclarationContext;

ModelParser.prototype.importDeclaration = function() {

    var localctx = new ImportDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ModelParser.RULE_importDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 112;
        this.match(ModelParser.T__1);
        this.state = 113;
        this.qualifiedName();
        this.state = 116;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ModelParser.T__2) {
            this.state = 114;
            this.match(ModelParser.T__2);
            this.state = 115;
            this.match(ModelParser.T__3);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AnnotationDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ModelParser.RULE_annotationDeclaration;
    return this;
}

AnnotationDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AnnotationDeclarationContext.prototype.constructor = AnnotationDeclarationContext;

AnnotationDeclarationContext.prototype.Identifier = function() {
    return this.getToken(ModelParser.Identifier, 0);
};

AnnotationDeclarationContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};




ModelParser.AnnotationDeclarationContext = AnnotationDeclarationContext;

ModelParser.prototype.annotationDeclaration = function() {

    var localctx = new AnnotationDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ModelParser.RULE_annotationDeclaration);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 118;
        this.match(ModelParser.T__4);
        this.state = 119;
        this.match(ModelParser.Identifier);
        this.state = 120;
        this.match(ModelParser.T__5);
        this.state = 121;
        this.type(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AnnotationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ModelParser.RULE_annotation;
    return this;
}

AnnotationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AnnotationContext.prototype.constructor = AnnotationContext;

AnnotationContext.prototype.Identifier = function() {
    return this.getToken(ModelParser.Identifier, 0);
};

AnnotationContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};




ModelParser.AnnotationContext = AnnotationContext;

ModelParser.prototype.annotation = function() {

    var localctx = new AnnotationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ModelParser.RULE_annotation);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 123;
        this.match(ModelParser.T__6);
        this.state = 124;
        this.match(ModelParser.Identifier);
        this.state = 129;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        if(la_===1) {
            this.state = 125;
            this.match(ModelParser.T__7);
            this.state = 126;
            this.expression(0);
            this.state = 127;
            this.match(ModelParser.T__8);

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TopDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ModelParser.RULE_topDeclaration;
    return this;
}

TopDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TopDeclarationContext.prototype.constructor = TopDeclarationContext;

TopDeclarationContext.prototype.entityDeclaration = function() {
    return this.getTypedRuleContext(EntityDeclarationContext,0);
};

TopDeclarationContext.prototype.annotation = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AnnotationContext);
    } else {
        return this.getTypedRuleContext(AnnotationContext,i);
    }
};

TopDeclarationContext.prototype.memberDeclaration = function() {
    return this.getTypedRuleContext(MemberDeclarationContext,0);
};




ModelParser.TopDeclarationContext = TopDeclarationContext;

ModelParser.prototype.topDeclaration = function() {

    var localctx = new TopDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ModelParser.RULE_topDeclaration);
    var _la = 0; // Token type
    try {
        this.state = 145;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 134;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===ModelParser.T__6) {
                this.state = 131;
                this.annotation();
                this.state = 136;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 137;
            this.entityDeclaration();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 141;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===ModelParser.T__6) {
                this.state = 138;
                this.annotation();
                this.state = 143;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 144;
            this.memberDeclaration();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EntityDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ModelParser.RULE_entityDeclaration;
    return this;
}

EntityDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EntityDeclarationContext.prototype.constructor = EntityDeclarationContext;
